<resources>
    <string name="app_name">Game Sales</string>
    <string name="description">Description</string>
    <string name="pc_requirements">PC requirements</string>
    <string name="min_requirements">Min requirements</string>
    <string name="recommended_requirements">Recommended requirements</string>
    <string name="normal_price">Normal price:</string>
    <string name="price">Price</string>
    <string name="sale_price">Sale price:</string>
    <string name="deal_in">Deal in</string>
    <string name="store_name">Store name</string>
    <string name="visit_store">Visit Store</string>
    <string name="filters">Filters</string>
    <string name="sale_percent">Sale percent</string>
    <string name="title">Title</string>
    <string name="loading">Loading</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="loaded_from_database">Loaded from database</string>
</resources>