<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivGameImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvTitle"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="TITLE"
            style="@style/TitleTextViewStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivGameImage" />

        <TextView
            android:id="@+id/tvGameDescreption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expand_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvGameDescreption">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/pc_requirements"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/collapseArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="90"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/ic_baseline_keyboard_arrow_down_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandable_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/expand_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:el_duration="500"
            app:el_expanded="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvPcMinRequirements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/min_requirements"
                    android:textAlignment="center"
                    style="@style/RequirementsTextViewStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvPcRecommendedRequirements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:text="@string/recommended_requirements"
                    android:textAlignment="center"
                    style="@style/RequirementsTextViewStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPcMinRequirements" />
            </LinearLayout>

        </net.cachapa.expandablelayout.ExpandableLayout>


        <TextView
            android:id="@+id/tvNormalPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/normal_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expandable_layout" />

        <TextView
            android:id="@+id/tvNormalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/price"
            style="@style/NormalPriceTextViewStyle"
            app:layout_constraintStart_toEndOf="@id/tvNormalPriceLabel"
            app:layout_constraintTop_toBottomOf="@id/expandable_layout" />

        <TextView
            android:id="@+id/tvSalePriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/sale_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNormalPriceLabel" />

        <TextView
            android:id="@+id/tvSalePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/price"
            style="@style/SalePriceTextViewStyle"
            app:layout_constraintStart_toEndOf="@id/tvSalePriceLabel"
            app:layout_constraintTop_toBottomOf="@id/tvNormalPrice" />

        <TextView
            android:id="@+id/tvSalePercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/price"
            style="@style/PercentTextViewStyle"
            app:layout_constraintStart_toEndOf="@id/tvNormalPrice"
            app:layout_constraintTop_toTopOf="@id/tvNormalPriceLabel"
            app:layout_constraintBottom_toBottomOf="@id/tvSalePriceLabel" />

        <TextView
            android:id="@+id/tvStoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:text="@string/deal_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSalePriceLabel" />

        <ImageView
            android:id="@+id/ivStoreImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStoreLabel"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvStoreName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/store_name"
            style="@style/TitleTextViewStyle"
            app:layout_constraintStart_toEndOf="@id/ivStoreImage"
            app:layout_constraintTop_toTopOf="@id/ivStoreImage"
            app:layout_constraintBottom_toTopOf="@id/btnStore" />

        <Button
            android:id="@+id/btnStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/visit_store"
            app:layout_constraintBottom_toBottomOf="@id/ivStoreImage"
            app:layout_constraintStart_toEndOf="@id/ivStoreImage" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

