<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expand_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/filters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/collapseArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="90"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/ic_baseline_keyboard_arrow_down_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/expandable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/expand_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:el_duration="500"
        app:el_expanded="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsPriceFilter"
                app:layout_constraintTop_toTopOf="@id/tvPriceLabel"
                app:layout_constraintBottom_toBottomOf="@id/tvPriceLabel"
                app:layout_constraintStart_toEndOf="@id/tvPriceLabel"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:valueFrom="0"
                android:valueTo="50"
                android:stepSize="1"
                app:values="@array/price_slider_prices"
                />

            <TextView
                android:id="@+id/tvSalePercentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sale_percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsSalePercentFilter"
                app:layout_constraintTop_toTopOf="@id/tvSalePercentLabel"
                app:layout_constraintBottom_toBottomOf="@id/tvSalePercentLabel"
                app:layout_constraintStart_toEndOf="@id/tvSalePercentLabel"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:valueFrom="50"
                android:valueTo="100"
                android:stepSize="1"
                app:values="@array/price_slider_percents"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </net.cachapa.expandablelayout.ExpandableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gamesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>